--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <slf4j.version>1.7.7</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
         <json-lib.version>2.4</json-lib.version>
+        <jackson.version>2.9.4</jackson.version>
         <junit.version>4.9</junit.version>
         <fastjson.version>1.2.35</fastjson.version>
         <gson.version>2.2.4</gson.version>
@@ -163,11 +164,27 @@
             <version>${json-lib.version}</version>
             <classifier>jdk15</classifier>
         </dependency>
-
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>${fastjson.version}</version>
+        </dependency>
+
+        <!--jackson-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
         <!--apache工具包-->
