--- a/ssm-common/pom.xml
+++ b/ssm-common/pom.xml
@@ -3,10 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.jetora.ssm_multi_modules</groupId>
+    <parent>
+        <artifactId>ssm_multi_modules_restful</artifactId>
+        <groupId>com.jetora.ssm_multi_modules_restful</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <version>1.0-SNAPSHOT</version>
     <artifactId>ssm-common</artifactId>
     <packaging>jar</packaging>
+
     <properties>
         <!--编译级别-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
