--- a/ssm-dao/pom.xml
+++ b/ssm-dao/pom.xml
@@ -23,7 +23,7 @@
     <dependencies>
         <!--添加 ssm-pojo module依赖-->
         <dependency>
-            <groupId>com.jetora.ssm_multi_modules</groupId>
+            <groupId>com.jetora.ssm_multi_modules_restful</groupId>
             <artifactId>ssm-pojo</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
