--- a/ssm-service/pom.xml
+++ b/ssm-service/pom.xml
@@ -22,7 +22,7 @@
     <dependencies>
         <!--添加 ssm-dao module依赖-->
         <dependency>
-            <groupId>com.jetora.ssm_multi_modules</groupId>
+            <groupId>com.jetora.ssm_multi_modules_restful</groupId>
             <artifactId>ssm-dao</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
