--- a/ssm-web/pom.xml
+++ b/ssm-web/pom.xml
@@ -82,15 +82,15 @@
 
         <!--添加 ssm-service module依赖-->
         <dependency>
-            <groupId>com.jetora.ssm_multi_modules</groupId>
-            <artifactId>ssm-service</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>com.jetora.ssm_multi_modules_restful</groupId>
             <artifactId>ssm-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.jetora.ssm_multi_modules_restful</groupId>
+            <artifactId>ssm-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+         </dependency>
     </dependencies>
 
     <build>
