--- a/ssm-web/src/main/resources/jdbc.properties
+++ b/ssm-web/src/main/resources/jdbc.properties
@@ -1,3 +1,7 @@
-jdbc.url=jdbc:mysql://192.168.56.101:3306/ssmmultimodules?useUnicode=true&characterEncoding=utf8
-jdbc.username=root
-jdbc.password=rootpass
+jdbc0.url=jdbc:mysql://192.168.56.101:3306/dbtbl_0_master?useUnicode=true&characterEncoding=utf8
+jdbc0.username=root
+jdbc0.password=rootpass
+
+jdbc1.url=jdbc:mysql://192.168.56.101:3306/dbtbl_1_master?useUnicode=true&characterEncoding=utf8
+jdbc1.username=root
+jdbc1.password=rootpass
