--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.jetora.ssm_multi_modules_restful</groupId>
-    <artifactId>ssm_multi_modules_restful</artifactId>
+    <groupId>com.jetora.ssm_sharding_jdbc</groupId>
+    <artifactId>ssm_sharding_jdbc</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
@@ -30,6 +30,7 @@
         <gson.version>2.2.4</gson.version>
         <commons-lang3.version>3.3.2</commons-lang3.version>
         <pagehelper.version>4.1.4</pagehelper.version>
+        <sharding-jdbc.version>2.0.3</sharding-jdbc.version>
 
         <!--编译级别-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -219,6 +220,18 @@
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
             <version>${pagehelper.version}</version>
+        </dependency>
+
+        <!-- 引入sharding-jdbc核心模块 -->
+        <dependency>
+            <groupId>io.shardingjdbc</groupId>
+            <artifactId>sharding-jdbc-core-spring-namespace</artifactId>
+            <version>${sharding-jdbc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.shardingjdbc</groupId>
+            <artifactId>sharding-jdbc-core</artifactId>
+            <version>${sharding-jdbc.version}</version>
         </dependency>
 
         <!--apache工具包-->
