--- a/ssm-common/pom.xml
+++ b/ssm-common/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <artifactId>ssm_multi_modules_restful</artifactId>
-        <groupId>com.jetora.ssm_multi_modules_restful</groupId>
+        <artifactId>ssm_sharding_jdbc</artifactId>
+        <groupId>com.jetora.ssm_sharding_jdbc</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <version>1.0-SNAPSHOT</version>
