--- a/ssm-dao/pom.xml
+++ b/ssm-dao/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.jetora.ssm_multi_modules_restful</groupId>
+    <groupId>com.jetora.ssm_sharding_jdbc</groupId>
     <artifactId>ssm-dao</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -22,7 +22,7 @@
     <dependencies>
         <!--添加 ssm-pojo module依赖-->
         <dependency>
-            <groupId>com.jetora.ssm_multi_modules_restful</groupId>
+            <groupId>com.jetora.ssm_sharding_jdbc</groupId>
             <artifactId>ssm-pojo</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
