--- a/ssm-service/pom.xml
+++ b/ssm-service/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>ssm_multi_modules_restful</artifactId>
-        <groupId>com.jetora.ssm_multi_modules_restful</groupId>
+        <artifactId>ssm_sharding_jdbc</artifactId>
+        <groupId>com.jetora.ssm_sharding_jdbc</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -22,7 +22,7 @@
     <dependencies>
         <!--添加 ssm-dao module依赖-->
         <dependency>
-            <groupId>com.jetora.ssm_multi_modules_restful</groupId>
+            <groupId>com.jetora.ssm_sharding_jdbc</groupId>
             <artifactId>ssm-dao</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
